# MCP-Tools

./: .gitignore  CLAUDE.md  SCHEDULE.md  license_gate.py  mcp_license.py  scaffold.py  whop-listings.md  whop-tiers.md
mcp-api-security/: README.md  pyproject.toml
mcp-api-security/src/: server.py
mcp-api-security/src/tools/: cors_check.py  injection_test.py  rate_limit_test.py  scan_owasp.py  security_report.py  test_auth.py
mcp-cicd-optimizer/: README.md  pyproject.toml
mcp-cicd-optimizer/src/: server.py
mcp-cicd-optimizer/src/tools/: analyze_pipeline.py  build_trends.py  cache_analysis.py  find_bottlenecks.py  optimize_config.py  parallel_strategy.py
mcp-cloud-security/: README.md  pyproject.toml
mcp-cloud-security/src/: server.py
mcp-cloud-security/src/tools/: compliance_check.py  encryption_audit.py  iam_audit.py  misconfig_scan.py  network_exposure.py  security_score.py
mcp-color-tools/: README.md  pyproject.toml
mcp-color-tools/src/: server.py
mcp-color-tools/src/tools/: build_theme.py  check_contrast.py  color_harmonies.py  generate_palette.py  hex_to_rgb.py  wcag_compliance.py
mcp-compete-intel/: README.md  pyproject.toml
mcp-compete-intel/src/: server.py
mcp-compete-intel/src/tools/: compare_features.py  detect_tech_stack.py  pricing_monitor.py  social_presence.py  track_changes.py  traffic_estimate.py
mcp-compliance/: README.md  pyproject.toml
mcp-compliance/src/: server.py
mcp-compliance/src/tools/: evidence_collect.py  gap_analysis.py  gdpr_assessment.py  generate_report.py  hipaa_check.py  pci_scan.py  soc2_audit.py
mcp-contract-audit/: README.md  pyproject.toml
mcp-contract-audit/src/: server.py
mcp-contract-audit/src/tools/: access_control.py  analyze_contract.py  audit_report.py  find_vulnerabilities.py  gas_optimize.py  reentrancy_check.py
mcp-crypto-portfolio/: README.md  pyproject.toml
mcp-crypto-portfolio/src/: server.py
mcp-crypto-portfolio/src/tools/: defi_positions.py  pnl_analysis.py  portfolio_summary.py  tax_report.py  track_exchange.py  whale_alerts.py
mcp-crypto-utils/: README.md  pyproject.toml
mcp-crypto-utils/src/: server.py
mcp-crypto-utils/src/tools/: base64_encode.py  encrypt_aes.py  generate_key.py  hash_file.py  hash_text.py  jwt_decode.py  jwt_verify.py
mcp-data-pipeline/: README.md  pyproject.toml
mcp-data-pipeline/src/: server.py
mcp-data-pipeline/src/tools/: create_pipeline.py  data_lineage.py  monitor_jobs.py  pipeline_stats.py  retry_failed.py  run_pipeline.py  schedule_pipeline.py
mcp-data-quality/: README.md  pyproject.toml
mcp-data-quality/src/: server.py
mcp-data-quality/src/tools/: check_completeness.py  detect_anomalies.py  profile_dataset.py  quality_score.py  schema_drift.py  validation_rules.py
mcp-datagen/: README.md  pyproject.toml
mcp-datagen/src/: server.py
mcp-datagen/src/tools/: fake_address.py  fake_company.py  fake_credit_card.py  fake_dataset.py  fake_person.py  generate_uuids.py
mcp-dep-audit/: README.md  pyproject.toml
mcp-dep-audit/src/: server.py
mcp-dep-audit/src/tools/: audit_report.py  check_licenses.py  dependency_tree.py  find_outdated.py  scan_vulnerabilities.py  upgrade_path.py
mcp-dns-intel/: README.md  pyproject.toml
mcp-dns-intel/src/: server.py
mcp-dns-intel/src/services/: __init__.py  dns_service.py  ssl_service.py  whois_service.py
mcp-docker-compose/: README.md  pyproject.toml
mcp-docker-compose/src/: server.py
mcp-docker-compose/src/tools/: add_service.py  generate_compose.py  health_check.py  network_diagram.py  optimize_resources.py  validate_compose.py
mcp-email-campaign/: README.md  pyproject.toml
mcp-email-campaign/src/: server.py
mcp-email-campaign/src/tools/: ab_test_analyze.py  build_template.py  list_hygiene.py  preview_render.py  send_test.py  subject_line_score.py
mcp-env-manager/: README.md  pyproject.toml
mcp-env-manager/src/: server.py
mcp-env-manager/src/tools/: diff_envs.py  encrypt_env.py  generate_template.py  rotate_secret.py  sync_envs.py  validate_env.py
mcp-git-analyzer/: README.md  pyproject.toml
mcp-git-analyzer/src/: server.py
mcp-git-analyzer/src/tools/: code_churn.py  commit_patterns.py  contributor_stats.py  file_hotspots.py  repo_summary.py  tech_debt_score.py
mcp-image-tools/: README.md  pyproject.toml
mcp-image-tools/src/: server.py
mcp-image-tools/src/services/: batch.py  compress.py  convert.py  metadata.py  resize.py  watermark.py
mcp-infra-costs/: LICENSE  README.md  pyproject.toml
mcp-infra-costs/src/: server.py
mcp-infra-costs/src/tools/: budget_alerts.py  cost_allocation.py  cost_analysis.py  forecast_spend.py  resource_optimize.py  tag_compliance.py
mcp-invoice-ocr/: README.md  pyproject.toml
mcp-invoice-ocr/src/: server.py
mcp-invoice-ocr/src/tools/: batch_process.py  categorize_expense.py  export_csv.py  extract_invoice.py  extract_receipt.py  tax_summary.py
mcp-k8s-manager/: README.md  pyproject.toml
mcp-k8s-manager/src/: server.py
mcp-k8s-manager/src/tools/: aggregate_logs.py  cluster_health.py  node_analysis.py  pod_status.py  resource_optimize.py  scaling_rules.py
mcp-legal-analyzer/: README.md  pyproject.toml
mcp-legal-analyzer/src/: server.py
mcp-legal-analyzer/src/tools/: compare_contracts.py  compliance_check.py  extract_clauses.py  nda_review.py  risk_analysis.py  summary_report.py
mcp-log-analyzer/: README.md  pyproject.toml
mcp-log-analyzer/src/: server.py
mcp-log-analyzer/src/tools/: alert_rules.py  cluster_errors.py  detect_patterns.py  extract_metrics.py  parse_log.py  timeline_analysis.py
mcp-ml-monitor/: README.md  pyproject.toml
mcp-ml-monitor/src/: server.py
mcp-ml-monitor/src/tools/: ab_compare.py  detect_drift.py  (+4 more)
mcp-options-greeks/: README.md  pyproject.toml
mcp-options-greeks/src/: server.py
mcp-pdf-toolkit/: LICENSE  README.md  pyproject.toml
mcp-pdf-toolkit/src/: server.py
mcp-qrcode/: README.md  pyproject.toml
mcp-qrcode/src/: server.py
mcp-real-estate/: README.md  pyproject.toml
mcp-real-estate/src/: server.py
mcp-regex/: README.md  pyproject.toml
mcp-regex/src/: server.py
(+213 files in other folders)
