[project]
name = "mcp-api-security"
version = "1.0.0"
description = "OWASP top 10 testing, auth bypass detection, injection scanning"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-api-security = "src.server:main"
