[project]
name = "mcp-data-pipeline"
version = "1.0.0"
description = "ETL workflows, scheduling, monitoring, retry logic, lineage"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-data-pipeline = "src.server:main"
