[project]
name = "mcp-datagen"
version = "1.0.0"
description = "Fake data generation: names, addresses, credit cards, UUIDs, datasets"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-datagen = "src.server:main"
