[project]
name = "mcp-infra-costs"
version = "1.0.0"
description = "Multi-cloud cost analysis, FinOps dashboards, budget alerts"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-infra-costs = "src.server:main"
